--- a/FindAllReferences/packages.config
+++ b/FindAllReferences/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="FluentNHibernate" version="2.1.2" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
+  <package id="Microsoft.Build.Locator" version="1.0.18" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.2" targetFramework="net461" />
@@ -40,7 +41,7 @@
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
